--- a/inline_js.html
+++ b/inline_js.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Inline JS</title>
-</head>
-<body>
-<script>
-    console.log("Hello from inline JavaScript");
-</script>
-</body>
+    <head>
+        <title>Inline JS</title>
+    </head>
+    <body>
+    <script>
+        alert("Hello from inline JavaScript");
+    </script>
+    </body>
 </html>
