did a few good tests with loops

--- a/MyExtraWork/practiceFile.html
+++ b/MyExtraWork/practiceFile.html
@@ -9,15 +9,85 @@
 
     <!-- STYLESHEET  STARTS  HERE -->
         <script>
+
+
+
+             //**********WHILE PRACTICE 1****************
+             // // !! make a loop to go from 20 to 50 with increments of ten !!
+             //
+             // var i = 20
+             //
+             // while (i = 50) {
+             //     console.log('while loop iteration #' + i);
+             //     i++;
+             // }
+             //
+             //
+             // // //**********WHILE PRACTICE 2****************
+             // // // !! write a program that will keep running until the user clicks ok !!
+             // var i = 10;
+             //
+             // do {
+             //     confirm("click OK if you want this look to stop working");
+             //     console.log('while loop iteration #' + i);
+             //     i++;
+             // } while (i < 10);
+
+
+             // //**********WHILE PRACTICE 3****************
+             // //create a function which puts on a coat if it's cold outside
+             // //use a while loop
+             //  // pure function
+             //
+             // var putCoatOn = false;
+             // function getHot(temp) {
+             //     if (putcoatOn = false) {
+             //         promt("It's cold outside! Would you like to put on a coat?");
+             //         let temp == true;
+             //     }
+             // }
+
+             // //Create a function that makes your $100k Tesla speed until the police are looking
+            // let x = true;
             //
+            //  function isSpeeding(x) {
+            //      while (x) {
+            //          let x = true;
+            //          x = confirm('You are going too fast, stop speeding?');
+            //          alert("Thank you for not speeding!")
+            //          while (x) {
+            //              alert("You are so going to get a fine of $1,000.00")
+            //              return x = false;
+            //          }
+            //          return x = true;
+            //      }
+            //  }
 
-             // pure function
+             for (var i = 1; i < 50; ++i) {
+                 if (i % 15 === 0) {
+                     console.log("FizzBuzz " + "-- the value of:(i) is: " + i);
+                 } else if (i % 3 === 0) {
+                     console.log("Fizz " + "-- the value of:(i) is: " + i);
+                 } else if (i % 5 === 0) {
+                     console.log("Buzz " + "-- the value of:(i) is: " + i);
+                 } else {
+                     console.log(i);
+                 }
+             };
 
-            function count(startCount) {
-                return ++startCount;
-            }
 
-            console.log(count(1));
+
+
+
+
+
+
+
+
+
+
+
+
         </script>
     </body>
 </html>
