only using the loops.html form to call my js files

--- a/loops.html
+++ b/loops.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Enter Title Here</title>
+        <title>Main Loops HTML</title>
 
         <!-- STYLESHEET  STARTS  HERE -->
         <style>
@@ -12,8 +12,13 @@
 
 
         <!-- SCRIPT  STARTS  HERE -->
+
+        <script>
+
+        </script>
         <script src="js/for_loops.js"></script>
         <script src="js/break_and_continue.js"></script>
         <script src="js/while.js"></script>
     </body>
 </html>
+
