always there is extra practice. I must code.

--- a/MyExtraWork/loops.html
+++ b/MyExtraWork/loops.html
@@ -75,7 +75,18 @@
                 console.log(people);
             });
 
+            const array1 = ['a', 'b', 'c', "d", [2, 3, 45, 7]];
 
+            array1.forEach ( element => console.log ( element ) );
+
+            > ////  "Output produce by forEach loop"  ////
+            > // "a"
+            > // "b"
+            > // "c"
+            > // "d"
+            > // Array [2, 3, 45, 7]
+
+            for
 
         </script>
     </body>
