--- a/split-join.html
+++ b/split-join.html
@@ -10,6 +10,6 @@
 
 
 <!----- JAVIASCRIPT STARTS  HERE ------->
-<script src="js/planets-string.js"></script>
+<script src="js/planets-strings.js"></script>
 </body>
 </html>
