finished with my welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -1,16 +1,58 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Enter Title Here</title>
+        <title>Ordered and Unordered Lists Example</title>
 
         <!----- STYLESHEET  STARTS  HERE ----->
         <style src="jcss/external.css"></style>
     </head>
     <body>
-        <h1>"Hello, World"</h1>
+        <h2>An Unordered HTML List</h2>
+        <p>Here, I am displaying 4 different examples of unordered lists. <br>Each with an attribute set to display different bullets types.
+            <br>Note that at the bottom we have a nested UL.</p>
+        <hr>
+
+        </ul>
+
+        <ul>
+            <li>This is an unordered list</li>
+            <li>it is bulleted</li>
+        </ul>
+        <hr>
+
+        <ul type="disc">
+            <li>Unordered list using circles.</li>
+            <li>Unordered list</li>
+            <li>Definition list</li>
+        </ul>
+        <hr>
+
+        <ul type="square">
+            <li>Unordered list using squares</li>
+            <li>Unordered list</li>
+            <li>Definition list</li>
+        </ul>
+        <hr>
+         <p>This is a nested UL</p>
+        <ul>
+            <li>Milk</li>
+            <li>Cheese
+                <ul>
+                    <li>Blue cheese</li>
+                    <li>Feta</li>
+                </ul>
+            </li>
+        </ul>
+        <hr>
+
+    <!--    <h2>An Ordered HTML List</h2>-->
+    <!--    <ol>-->
+    <!--        <li>This list</li>-->
+    <!--        <li>is numbered</li>-->
+    <!--    </ol>-->
 
 
-    <!----- JAVIASCRIPT STARTS  HERE ------->
-    <script src="js/external.js"></script>
+    <!----- JAVASCRIPT STARTS  HERE ------->
+<!--    <script></script>-->
     </body>
 </html>
