--- a/planets-js.html
+++ b/planets-js.html
@@ -1,15 +1,15 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Enter Title Here</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>Enter Title Here</title>
 
-    <!----- STYLESHEET  STARTS  HERE ----->
-    <style src="jcss/external.css"></style>
-</head>
-<body>
+        <!----- STYLESHEET  STARTS  HERE ----->
+        <style src="jcss/external.css"></style>
+    </head>
+    <body>
 
 
-<!----- JAVIASCRIPT STARTS  HERE ------->
-<script src="js/planets-array.js"></script>
-</body>
-</html>...
+        <!----- JAVIASCRIPT STARTS  HERE ------->
+        <script src="js/planets-array.js"></script>
+    </body>
+</html>
