savinng objects.js

--- a/MyExtraWork/loops.html
+++ b/MyExtraWork/loops.html
@@ -19,74 +19,78 @@
 
         <!-- STYLESHEET  STARTS  HERE -->
         <script>
-            var links = document.getElementsByTagName("a");
-
-            // for(let i = 0; i < links.length; i++) {
-            //     links[i].className = "links-" + i
+            // var links = document.getElementsByTagName("a");
+            //
+            // // for(let i = 0; i < links.length; i++) {
+            // //     links[i].className = "links-" + i
+            // // };
+            //
+            // // for (let i = 0; i < 5; i++) {
+            // //     console.log("Loop " + i);
+            // // };
+            //
+            // // for (let i = 5; i > 0; i--) {
+            // //     console.log("Loop " + i);
+            // // };
+            // for (let i = 0; i < 10; i++) {
+            //     console.log("Loop One " + i);
+            //     if (i === 2) continue;
+            //     if (i === 8) break;
             // };
-
-            // for (let i = 0; i < 5; i++) {
-            //     console.log("Loop " + i);
-            // };
-
-            // for (let i = 5; i > 0; i--) {
-            //     console.log("Loop " + i);
-            // };
-            for (let i = 0; i < 10; i++) {
-                console.log("Loop One " + i);
-                if (i === 2) continue;
-                if (i === 8) break;
-            };
-
-
+            //
+            //
+            // // let names = ["Alesha", "Teresa", "John", "Amy", "Cynthia", "Carry","Anastacia", "Alexander", "Alejancro"];
+            //
+            // // // Herem name can be anything significant.
+            // // for(name of names) {
+            // //     console.log(name);
+            // // };
+            //
+            //     // const user = {
+            //     //     "firstName" : "Javier",
+            //     //     "lastName" : "Estrada"
+            //     // };
+            //
+            //     // Herem key can be anything significant.
+            //     // for (key in user) console.log(user[key]);
+            //
+            // // incrementing from 0 to 9;
+            // // let i = 0;
+            // // while (i < 10) {
+            // //     console.log("Incrementing from 0 to 9 " + i);
+            // //     i++;
+            // // };
+            //
+            // //decrementing from 9 to zero;
+            // // continue means that where it encounters a condition, it skips that number;
+            // //         let x = 10;
+            // //         while (x > 0) {
+            // //             x--;
+            // //             if (x === 5) continue;
+            // //             console.log("Decrementing from 9 to 0 ==> " + x);
+            // //         };
+            //
             // let names = ["Alesha", "Teresa", "John", "Amy", "Cynthia", "Carry","Anastacia", "Alexander", "Alejancro"];
+            // names.forEach(people => {
+            //     console.log(people);
+            // });
+            //
+            // const array1 = ['a', 'b', 'c', "d", [2, 3, 45, 7]];
+            //
+            // array1.forEach ( element => console.log ( element ) );
+            //
+            // > ////  "Output produce by forEach loop"  ////
+            // > // "a"
+            // > // "b"
+            // > // "c"
+            // > // "d"
+            // > // Array [2, 3, 45, 7]
+            //
+            // for
 
-            // // Herem name can be anything significant.
-            // for(name of names) {
-            //     console.log(name);
-            // };
-
-                // const user = {
-                //     "firstName" : "Javier",
-                //     "lastName" : "Estrada"
-                // };
-
-                // Herem key can be anything significant.
-                // for (key in user) console.log(user[key]);
-
-            // incrementing from 0 to 9;
-            // let i = 0;
-            // while (i < 10) {
-            //     console.log("Incrementing from 0 to 9 " + i);
-            //     i++;
-            // };
-
-            //decrementing from 9 to zero;
-            // continue means that where it encounters a condition, it skips that number;
-            //         let x = 10;
-            //         while (x > 0) {
-            //             x--;
-            //             if (x === 5) continue;
-            //             console.log("Decrementing from 9 to 0 ==> " + x);
-            //         };
-
-            let names = ["Alesha", "Teresa", "John", "Amy", "Cynthia", "Carry","Anastacia", "Alexander", "Alejancro"];
-            names.forEach(people => {
-                console.log(people);
-            });
-
-            const array1 = ['a', 'b', 'c', "d", [2, 3, 45, 7]];
-
-            array1.forEach ( element => console.log ( element ) );
-
-            > ////  "Output produce by forEach loop"  ////
-            > // "a"
-            > // "b"
-            > // "c"
-            > // "d"
-            > // Array [2, 3, 45, 7]
-
-            for
+            for(let i = 0; i < 11; i++) {
+                console.log(i);
+            }
 
         </script>
     </body>
