--- a/MyExtraWork/object-pracice-lesson.html
+++ b/MyExtraWork/object-pracice-lesson.html
@@ -30,8 +30,10 @@
             let person01 = new Person("Javier", "green", 57);
             let person02 = new Person("Alesha", "blue", 41);
 
-            console.log(person01);
-            console.log(person02);
+            // console.log(person01);
+            // console.log(person02);
+
+
 
 
 
