--- a/forms.html
+++ b/forms.html
@@ -10,28 +10,27 @@
         <h2>Register With Us</h2>
         <form method="POST" action="https://request-inspector.glitch.me/">
             <label for="e-mail">e-mail:     </label>
-            <input id="e-mail" name="e-mail" type="e-mail" style="color:#888;"
-                   value="Enter e-mail">
+            <input id="e-mail" name="e-mail" type="text" placeholder="Input e-mail here.">
 
 
-<!--            <input type="text" name="firstname" title="First Name" style="color:#888;"-->
-<!--                   value="First Name" onfocus="inputFocus(this)" onblur="inputBlur(this)" />-->
-
-
-
-            <label for="password"  value="First Name">Password:</label>
-            <input id="password" name="password" type="password" >
+            <label for="password">Password:</label>
+            <input id="password" name="password" type="password">
             <br>
+
             <br>
             <label for="text-area"  >Enter bio here:</label>
-            <textarea name="bio" ></textarea>
+            <textarea name="bio" id="bio" cols="50" rows="10"></textarea>
             <br>
             <section>
-                <h2>How did you hear about us?</h2>
-                <input type="radio" name="quiz_question_1" value="A">Billboard<br>
-                <input type="radio" name="quiz_question_1" value="B">Radio advertisement<br>
-                <input type="radio" name="quiz_question_1" value="C">Internet advertisement<br>
-                <input type="radio" name="quiz_question_1" value="D">Other<br>
+                <h2>How'd you hear about Veridian Dynamics?</h2>
+                <input name="capture" id="billboard" value="billboard" type="checkbox">
+                <label for="billboard">Billboard</label>
+                <input name="capture" id="radio" value="radio advertisement" type="checkbox">
+                <label for="radio">Radio Advertisements</label>
+                <input name="capture" id="internet" value="internet advertisements" type="checkbox">
+                <label for="internet">Internet Advertisements</label>
+                <input name="capture" id="other" value="other" type="checkbox">
+                <label for="other">Other</label>
             </section>
             <br>
 
@@ -40,7 +39,7 @@
                 <option value="Safari">Safari</option>
                 <option value="Internet Explorer">Internet Explorer</option>
                 <option value="Google Chrome">Google Chrome</option>
-                <option value="Google Chrome">Firefox</option>
+                <option value="Firebox">Firefox</option>
             </select>
             <br>
             <br>
